--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </div>
         </section>
         
-        <section id="qoute">
-            <p class="qoute">This is an inspiring qoute, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <section id="quote">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p class="author">-Thor, God of Thunder</p>
         </section>
         
