Add markup and css for header
       -Add navbar with logo
       -Add Hero with CTA and image

--- a/index.html
+++ b/index.html
@@ -9,24 +9,22 @@
 </head>
 <body>
     <header>
-        <div class="navigation">
-            <div class="nav-logo">
-                <a href="#" class="logo">Website Logo</a>
-            </div>
-            <nav class="navbar primary">
-                <ul>
-                    <li class="nav-item"><a href="#">header link one</a></li>
-                    <li class="nav-item"><a href="#">header link two</a></li>
-                    <li class="nav-item"><a href="#">header link three</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="nav-primary">
+            <a href="#" class="logo">Website Logo</a>
+            <ul class="nav-links">
+                <li class="nav-item"><a href="#">header link one</a></li>
+                <li class="nav-item"><a href="#">header link two</a></li>
+                <li class="nav-item"><a href="#">header link three</a></li>
+            </ul>          
+        </nav>
         <div class="hero">
-            <div class="hero-left"></div>
+            <div class="hero-cta">
                 <h1>This Website is Awesome</h1>
                 <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="button hero-button">Sign up</button>
-            <div class="hero-right">
+            </div>
+            <div class="hero-image">
+                <img src="./images/teamwork.jpg" alt="teamwork">
             </div>
         </div>
     </header>
