--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
             <h2 class="info-header"> Some Random Information</h2>
             <div class="articles-container">
                 <div class="article">
-                    <img class="article-image" src="" alt="">
+                    <img class="article-image" src="./images/seo.jpg" alt="">
                     <p class="article-text">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="article">
-                    <img class="article-image" src="" alt="">
+                    <img class="article-image" src="./images/social.jpg" alt="">
                     <p class="article-text">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="article">
-                    <img class="article-image" src="" alt="">
+                    <img class="article-image" src="/images/website.jpg" alt="">
                     <p class="article-text">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="article">
-                    <img class="article-image" src="" alt="">
+                    <img class="article-image" src="./images/code.jpg" alt="">
                     <p class="article-text">this is some subtext under an illustration or image</p>
                 </div>
             </div>
@@ -54,7 +54,9 @@
         
         <section id="quote">
             <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p class="author">-Thor, God of Thunder</p>
+            <p class="author">
+                <strong>-Thor, God of Thunder</strong>
+            </p>
         </section>
         
         <section id="calltoaction">
