--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="hero-cta">
                 <h1>This Website is Awesome</h1>
                 <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</p>
-                <button class="button hero-button">Sign up</button>
+                <button class="hero-cta-button" type="button">Sign up</button>
             </div>
             <div class="hero-image">
                 <img src="./images/teamwork.jpg" alt="teamwork">
@@ -35,19 +35,19 @@
             <div class="articles-container">
                 <div class="article">
                     <img class="article-image" src="./images/seo.jpg" alt="">
-                    <p class="article-text">this is some subtext under an illustration or image</p>
+                    <p class="article-text">This is some subtext under an illustration or image</p>
                 </div>
                 <div class="article">
                     <img class="article-image" src="./images/social.jpg" alt="">
-                    <p class="article-text">this is some subtext under an illustration or image</p>
+                    <p class="article-text">This is some subtext under an illustration or image</p>
                 </div>
                 <div class="article">
                     <img class="article-image" src="/images/website.jpg" alt="">
-                    <p class="article-text">this is some subtext under an illustration or image</p>
+                    <p class="article-text">This is some subtext under an illustration or image</p>
                 </div>
                 <div class="article">
                     <img class="article-image" src="./images/code.jpg" alt="">
-                    <p class="article-text">this is some subtext under an illustration or image</p>
+                    <p class="article-text">This is some subtext under an illustration or image</p>
                 </div>
             </div>
         </section>
@@ -60,9 +60,15 @@
         </section>
         
         <section id="calltoaction">
-            <h3 class="cta-title">Call to action! It's time!</h3>
-            <p class="cta-text">Sign up for our product by clicking that button right over there!</p>
-            <button class="button cta-button">Sign up</button>
+            <div class="cta">
+                <div class="cta-text">
+                    <h3 class="cta-text-title">Call to action! It's time!</h3>
+                    <p class="cta-text-subtext">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="button">
+                    <button class="cta-button" type="button">Sign up</button>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
