Fix website.jpg path

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p class="article-text">This is some subtext under an illustration or image</p>
                 </div>
                 <div class="article">
-                    <img class="article-image" src="/images/website.jpg" alt="">
+                    <img class="article-image" src="./images/website.jpg" alt="">
                     <p class="article-text">This is some subtext under an illustration or image</p>
                 </div>
                 <div class="article">
